# KnightPac

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
knightpac/: __init__.py  main.py
knightpac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
knightpac/backend/: flatpak_manager.py  pacman_manager.py  pactree_parser.py  paru_manager.py  plugin.py  registry.py
knightpac/core/: logging_config.py  process_runner.py  progress_parser.py  terminal_buffer.py
knightpac/data/: history_repository.py
knightpac/models/: dependency.py  history.py  operation.py  operation_progress.py  package.py
knightpac/services/: dependency_service.py  diagnostics_service.py  history_service.py  notification_service.py  operation_queue.py  package_service.py  search_cache.py  search_ranking.py  search_service.py  settings_service.py  update_service.py
knightpac/ui/: about_page.py  aur_page.py  cache_page.py  dependencies_page.py  diagnostics_page.py  header_bar.py  history_page.py  icon_resolver.py  iconography.py  installed_page.py  main_window.py  overview_page.py  package_visuals.py  search_page.py  settings_page.py  sidebar.py  splash_screen.py  system_tray.py  terminal_panel.py  theme.py  updates_page.py
knightpac/ui/components/: __init__.py  dashboard_stat_card.py  kit.py  knight_badge.py  knight_button.py  knight_card.py  knight_section.py
knightpac/ui/widgets/: package_card.py  package_details.py
packaging/: PKGBUILD  knightpac.desktop
packaging/appimage/: README.md
packaging/flatpak/: com.knightpac.KnightPac.yml
