[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knightpac"
version = "0.3.0"
description = "Cross-platform graphical package manager for Linux"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "KnightPac Contributors" }]
dependencies = [
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
]

[project.scripts]
knightpac = "knightpac.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["knightpac*"]

[tool.setuptools.package-data]
knightpac = ["assets/**/*", "data/.gitkeep"]
